# t5_base_api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
api/v1/: translate.py
core/: config.py
schemes/: translate.py
