[tool.poetry]
name = "t5_base_api"
version = "0.1.0"
description = ""
authors = ["Christian Abrokwa <Cabrokwa11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
sentencepiece = "^0.1.97"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
transformers = "^4.21.1"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
